append sth to virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -561,8 +561,6 @@ uname -r
 lsb_release -a
 ```
 
-
-
 # Linux文件系统
 
 ## 文件系统与磁盘管理
@@ -1442,5 +1440,197 @@ file filename
 
 # Shell
 
-## Vim
+## 程序编辑器
+
+### Vi
+
+​	所以UNIX Like系统都会内置`Vi`文本编辑器，很多软件等编辑接口也都会主动调用`vi`。
+
+#### 模式
+
+​	分为一般模式、编辑模式与命令模式三种。
+
+- 一般模式
+
+  以`vi`命令打开一个文件就直接进入一般模式了。
+
+  可以进行删除、复制、粘贴等操作（**但不会改变文件内容**）
+
+- 编辑模式
+
+  在一般模式，按下`i, I, o, O, a, A, r, R`按键进入，可以编辑文件内容。
+
+- 命令行模式
+
+  在一般模式，输入`:`、`/`、`?`，光标移动到最下面一行，输入相关参数可以进行查找数据等操作。
+
+![image-20220103111542246](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103111542246.png)
+
+#### 按键说明
+
+- 移动光标
+
+![image-20220103111659552](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103111659552.png)
+
+![image-20220103112214806](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103112214806.png)
+
+![image-20220103111753039](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103111753039.png)
+
+- 一般模式切换编辑模式
+
+  ![image-20220103112427307](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103112427307.png)
+
+- 一般模式切换到命令行模式
+
+  ![image-20220103112503104](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103112503104.png)
+
+### Vim
+
+#### 概念
+
+​	`Vim`是`Vi`的高级版本，`Vim`可以使用颜色或底线等方式来显示一些特殊的信息，还支持正则表达式的查找架构、多文件编辑、块复制等。
+
+![image-20220103113750337](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103113750337.png)
+
+#### 块选择
+
+![image-20220103113153738](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103113153738.png)
+
+1. 使用`vim`打开文件
+2. 使用按键移动光标到预选块左上角
+3. 按下`[Ctrl] + V`后将光标移动到预选块右下角
+4. 按下`y`进行复制
+5. 按下`p`进行粘贴
+
+#### 多文件编辑
+
+![](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103113454143.png)
+
+#### 多窗口
+
+![image-20220103113619794](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103113619794.png)
+
+## Shell概念
+
+### 硬件、内核与Shell
+
+​	我们必须通过`shell`将我们输入到命令与内核通信，好让内核可以控制硬件来正确无误的工作。
+
+​	`Shell`的功能只是提供用户操作系统的一个接口，因此`Shell`需要可以调用其他软件。即**只要能操作应用程序等接口都能称为`shell`**.
+
+![image-20220103114029649](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103114029649.png)
+
+### Linux的Shell
+
+​	在`/etc/shells`文件中定义了可用的`shell`。
+
+- `/bin/sh`，**已经被`/bin/bash`所代替**
+- `/bin/bash`，Linux的模式shell，基于GNU架构
+- `/bin/ksh`，Kornshell由AT&T Bell lab.发展出来，兼容bash
+- `/bin/tcsh`，整合C Sehll，提供更多功能
+- `/bin/csh`，已经被/bin/tcsh`所替代
+- `/bin/zsh`，基于ksh发展出来，功能更强大的shell
+
+`bash`内置了很多命令，可以利用`type`判断是否是内置命令。
+
+当输入命令太长是时，可以使用`\[Enter]`进行换行输入
+
+## Shell变量
+
+​	程序、变量与不同用户的关系：
+
+![image-20220103163456519](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103163456519.png)
+
+### 变量的显示与设置	
+
+- 显示
+
+  ```shell
+  echo ${var}
+  ```
+
+- 设置
+
+  ```shell
+  var=value
+  ```
+
+  注意：
+
+  - 等号两边不能接空格
+
+  - 变量内容有空格，可以使用双引号或单引号
+
+  - **若变量需要在其他子进程执行，需要使用`export`命令**
+
+    子进程仅会继承父进程的环境变量，子进程不会继承父进程的自定义变量
+
+    `export`即是将自定义变量转换为环境变量
+
+  - 通常大小自负为系统默认变量，自行设置变量可以使用小写字符
+
+  - 设置数字变量
+
+    ```shell
+    var[index]=content
+    #数组名字为var，下标为index，内容为content
+    ```
+
+- 取消设置
+
+  ```shell
+  unset varname
+  ```
+
+### 环境变量
+
+- `evn`查看环境变量
+
+- `set`查看所有变量，含环境变量与自定义变量
+
+`export`即是将自定义变量转换为环境变量
+
+### 变量相关操作命令
+
+#### 语系变量locale
+
+- 查看系统支持的所有语系
+
+  ```shell
+  locale -a
+  ```
+
+- 查看语系相关设置编码
+
+  ```shell
+  locale
+  ```
+
+  ![image-20220103170213177](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103170213177.png)
+
+#### 读取键盘输入的变量read
+
+![image-20220103170543499](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103170543499.png)
+
+#### 声明变量类型declare
+
+![image-20220103171756248](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103171756248.png)
+
+设置字符串时，默认变量类型为**字符串**。
+
+#### 变量的删除、替换
+
+![image-20220103172941732](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103172941732.png)
+
+#### 变量的测试与内容替换
+
+![image-20220103173042243](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103173042243.png)
+
+## 命令别名与历史命令
+
+
+
+## Shell资源限制命令ulimit
+
+![image-20220103172454549](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103172454549.png)
 
