append sth t0 virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -244,7 +244,7 @@ tags: 操作系统OS
 
 <img src="https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211218170823839.png" alt="image-20211218170823839" style="zoom:50%;" />
 
-# Linux简介
+# Linux概览
 
 ​	提供了一个完整的操作系统当中最底层的硬件控制与资源管理的完整架构，是沿袭Unix良好的传统而来的（UNIX Like 系统），所以**相当稳定并且功能强大，且可以在目前的个人计算机（x86系统）上面跑。**
 
@@ -361,6 +361,8 @@ tags: 操作系统OS
 
 ## Linux开机流程
 
+Chapter 20
+
 ### 正常开机
 
 1. BIOS，开机主动执行的程序，会识别第一个可开机的设备（硬盘）。
@@ -419,6 +421,10 @@ tags: 操作系统OS
 
 ​	使用**分号(;)**隔开多条命令，命令按顺序执行。
 
+### 可以换行输入命令
+
+​	当输入命令太长是时，可以使用`\[Enter]`进行换行输入
+
 ### 用户符号区别
 
 - 普通用户
@@ -433,7 +439,7 @@ tags: 操作系统OS
 
 - 概念
 
-  在终端执行命令的时候，其实由一个同名的可执行文件存在。系统会按照PATH的设置去每个PATH定义的目录下查询可执行文件，如果有多个同名的可执行文件，先查到的可执行文件先执行。
+  在终端执行命令的时候，其实由一个同名的可执行文件存在。系统会按照PATH的设置去每个PATH定义的目录下查询可执行文件，如果有多个同名的可执行文件，先查到的可执行文件先执行。（当涉及到别名等其他情况时情况会更复杂，详见`Shell-》Bash Shell环境-》路径与命令查找顺序`）
 
 - 查看PATH
 
@@ -559,6 +565,12 @@ uname -r
 
 ```shell
 lsb_release -a
+```
+
+### 清除界面显示
+
+```shell
+clear
 ```
 
 # Linux文件系统
@@ -1438,6 +1450,18 @@ file filename
 
 ![image-20211229161253678](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229161253678.png)
 
+# Linux用户管理
+
+Chapter 14、
+
+# Linux进程管理
+
+Chapter 16、17、18
+
+# Linux系统使用
+
+Chaper 21、22、23
+
 # Shell
 
 ## 程序编辑器
@@ -1533,13 +1557,13 @@ file filename
 
 `bash`内置了很多命令，可以利用`type`判断是否是内置命令。
 
-当输入命令太长是时，可以使用`\[Enter]`进行换行输入
-
 ## Shell变量
 
 ​	程序、变量与不同用户的关系：
 
 ![image-20220103163456519](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103163456519.png)
+
+**注意，后面命令别名、自定义的变量，如果没有进行保存操作（Bash Shell小节会说），在注销bash后会失效**。
 
 ### 变量的显示与设置	
 
@@ -1584,11 +1608,17 @@ file filename
 
 ### 环境变量
 
-- `evn`查看环境变量
+#### `evn`命令查看环境变量
 
-- `set`查看所有变量，含环境变量与自定义变量
+![image-20220105133804168](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105133804168.png)
 
-`export`即是将自定义变量转换为环境变量
+#### `set`命令查看所有变量
+
+​	含环境变量与自定义变量
+
+​	`export`即是将自定义变量转换为环境变量
+
+![image-20220105133904835](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105133904835.png)
 
 ### 变量相关操作命令
 
@@ -1626,11 +1656,456 @@ file filename
 
 ![image-20220103173042243](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103173042243.png)
 
-## 命令别名与历史命令
+### 命令别名
+
+- 设置别名
+
+  ```shell
+  alias newName=originName
+  ```
+
+- 查看别名
+
+  ```shell
+  alias
+  ```
+
+- 删除别名
+
+  ```shell
+  unalias aliasName
+  ```
+
+## Bash环境和操作
+
+### 路径与命令查找顺序
+
+​	当同一个命令名对应不同文件时，查找顺序如下：
+
+1. 以相对/绝对路径执行命令
+2. 由alias找到该命令执行
+3. 由bash内置的命令来执行
+4. 通过PATH环境变量的路径找到的一个命令来执行
+
+### 登录和欢迎信息
+
+- 登录提示信息文件
+
+  - `/etc/issue`放置本地登录信息
+
+    这个文件可以使用反斜杠作为变量调用。
+
+    ![image-20220105135332090](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105135332090.png)
+
+  - `/etc/issue.net`放置远程登录信息
+
+- 欢迎信息
+
+  登录完成后，告诉登录者的信息。在`/etc/motd`文件放置。
+
+### 环境配置文件
+
+bash Shell有两种登录方式
+
+- login shell
+
+  取得bash时需要完整的登录流程的，即为login shell。
+
+  这种方式登录时会读取`/etc/profile`和`~/.bash_profile或~/bash_login或~/.profile`。前者为系统整体设置，后者为用户个人设置。
+
+- non-login shell
+
+  取得bash接口的方法不需要重复登录时，如在图形界面登录后启动终端机，此时终端机的环境即为non-login shell。bash下产生的bash子进程也是这个情况
+
+#### login Shell
+
+![image-20220105141733209](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105141733209.png)
+
+##### 系统配置文件
+
+​	`/etc/profile`每个用户登录后取得bash时一定要读取的文件。下面是这个文件中主要的几个变量：
+
+- PATH：会依据UID决定PATH变量要不要含有sbin的系统命令目录
+- MAIL：依据账号设置好用户的mailbox到`/var/spool/mail/账号名`
+- USER：根据用户的账号设置此变量内容
+- HOSTNAME：依据主机的hostname命令决定此变量内容
+- HISTSIZE：历史命令记录条数
+
+此外，文件中还会调用其他的配置文件。
+
+##### 个人配置文件
+
+​	在读取`/etc/profile`后会继续读取个人配置文件。3个个人配置文件**只会读取其中一个**，读取顺序是：
+
+1. `~/.bash_profile`
+2. `~/.bash_login`
+3. `~/.profile`
+
+其中`~/.bash_profile`中主要逻辑是判断`~/.bashrc`文件是否存在，存在就读取。
+
+#### non-login Shell
+
+​	该方式登录bash仅会读取`~/.bashrc`而已。
+
+![image-20220105143606285](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105143606285.png)
+
+#### 读取环境配置文件
+
+​	修改上述配置文件后，通常需要注销和重新登录后生效。但是使用`source`命令可以直接生效而不用重启.
+
+```shel
+source filename
+. filename
+```
+
+### 通配符和特殊符号
+
+- 通配符
+
+  ![image-20220105144730322](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105144730322.png)
+
+- 特殊符号
+
+  ![image-20220105144744963](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105144744963.png)
+
+### 数据流重定向
+
+#### 概念
+
+​	命令执行的时候需要输入，执行完后需要将数据输出。具体从哪输入和输出到哪则可以进行设置。
+
+- 标准输入（standard input, stdin)：代码为0，使用<或<<
+- 标准输出（standard output, stdout)：代码为1，使用>或>>
+- 标准错误输出（standard error output，stderr)：代码为2，使用2>或2>>
+
+#### 数据流输出
+
+- 不同符号的意义
+
+  - 1>：以覆盖的方法将正确的数据输出到指定的文件或设备上
+  - 1>>：以累计的方法将正确的数据输出到指定的文件或设备上
+  - 2>：以覆盖的方法将错误的数据输出到指定的文件或设备上
+  - 2>>：以累计的方法将错误的数据输出到指定的文件或设备上
+
+- 常见用法
+
+  ```shell
+  command > filename1 2> filename2 # 正确和错误数据分别输出到两个文件
+  
+  command > filename 2>&1 # 正确和错误数据分别输出到同一个文件
+  ```
+
+- `/dev/null`垃圾桶
+
+  这个黑洞设备可以吃掉任何导向这个设备的信息，即输入这里的信息将被丢弃。
+
+#### 数据流输入
+
+​	stdin即是将原本需要由键盘输入的数据改由文件内容来代替
+
+- `<`
+
+  ```shell
+  cat > outfilename < inputfilename
+  ```
+
+  ![image-20220105150517867](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105150517867.png)
+
+- <<
+
+  代表输入结束的意思。
+
+  ![image-20220105150546420](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105150546420.png)
+
+### 多个命令执行的判断条件
+
+#### 命令回传码$?
+
+​	若一个命令执行的结果为正确，在Linux下面会回传一个**`$?=0`**
+
+#### 判断条件
+
+![image-20220105151003619](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105151003619.png)
+
+​	若有多个判断条件，Linux**从左到右**开始进行判断
+
+### 管道命令
+
+​	符号是`|`，将多个命令连接起来进行处理
+
+![image-20220105151436691](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105151436691.png)
+
+管道命令在使用时，**每个管道后面的第一个数据一定是“命令”，且这个命令必须要能够接收数据**。
+
+管道命令的注意点：
+
+- 管道命令仅处理**stdout，忽略stderr**
+- 管道命令必须接收前一个命令的数据成为stdin来继续处理
+
+注意减号`-`的用途，**在某些命令用到文件名的时候，stdin和stdout可以用`-`来代替**。
+
+#### 选取命令
+
+- cut
+
+  按自定义方式分割字符串并选取片段
+
+  ![image-20220105151821196](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105151821196.png)
+
+- grep
+
+  查找输入相关的字符串
+
+  ![image-20220105151953296](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105151953296.png)![image-20220105152001216](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152001216.png)
+
+  ![image-20220105160248886](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160248886.png)
+
+#### 排序命令
+
+- sort
+
+  ![image-20220105152100436](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152100436.png)
+
+- uniq
+
+  对输出结果去重处理
+
+  ![image-20220105152156981](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152156981.png)
+
+- wc
+
+  统计字符
+
+  ![image-20220105152440567](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152440567.png)
+
+#### 双向重定向
+
+​	同时将数据流送到文件与屏幕
+
+![image-20220105152614042](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152614042.png)
+
+#### 字符串转换
+
+- tr
+
+  删除一段信息当中的文字，或是进行文字信息的替换。
+
+  后面的字符串可以是**正则表达式**
+
+  ![image-20220105152749247](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152749247.png)![](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105152803495.png)
+
+- col
+
+  ![image-20220105153105945](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105153105945.png)
+
+- join
+
+  对比两个文件的数据相关性，并将两个文件当中有相同数据的行相加在一起
+
+  ![image-20220105153216104](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105153216104.png)
+
+- paste
+
+  直接将两个文件的两行贴在一起
+
+  ![image-20220105153540224](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105153540224.png)
+
+- expand
+
+  将[tab]转换为空格键
+
+  [tab]默认为8个空格
+
+  ![image-20220105153703697](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105153703697.png)
+
+#### 切割命令
+
+​	将一个大文件依据文件大小或行数来切割为小文件
+
+![image-20220105153901791](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105153901791.png)
+
+#### 参数代换
+
+​	xargs读入stdin的数据，并以空格或断行字符进行分隔为名的参数
+
+![image-20220105154026640](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105154026640.png)
+
+## 正则表达式
+
+​	正则表达式(Regular Expression)是通过一些特殊字符的排列，用以查找、替换、删除一行或多行文字字符串。
+
+### 基础正则
+
+#### 语系的设置
+
+​	不同语系对正则的结果有影响，通常使用C语系即`LANG=C`，兼容POSIX的标准。其有些特殊的符号如下。
+
+![image-20220105160112857](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160112857.png)
+
+#### 基础正则字符表
+
+![image-20220105160416217](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160416217.png)![image-20220105160426010](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160426010.png)
+
+### 扩展正则
+
+![image-20220105160844165](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160844165.png)
+
+### 相关工具
+
+#### 数据CURD工具`sed`
+
+![image-20220105160754008](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160754008.png)![image-20220105160800618](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105160800618.png)
+
+#### 输出格式化工具
+
+- printf
+
+  ![image-20220105161017356](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105161017356.png)
+
+- awk
+
+  ```shell
+  awk '条件类型1{动作1} 条件类型2{动作2} ...' filename
+  ```
+
+  ![image-20220105161841639](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105161841639.png)
+
+  - 相比于sed常常处理整行数据，awk可以分段处理，非常适合处理小型的数据处理。
+
+  - awk可以后接文件处理，也可以处理前一个命令的stdout.
+
+  - 处理的每一行的字段内的数据，默认以空格键或[tab]键进行分隔。
+
+  - 每一行的字段都有变量名`$colum`，colum是第几列，其中`$0`表示整行。
+  - awk的内置参数：
+
+  ![image-20220105162023997](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105162023997.png)
+
+  - awk的条件逻辑运算符
+
+  ![image-20220105162144128](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105162144128.png)
+
+  - 在awk中，shell变量可以直接使用，不用加上$符号
+
+## Shell Script
+
+### 概念
+
+​	shell script 是利用shell的功能所写的一个“程序”，这个程序是使用纯文本文件，将一些shell的语法与命令（含外部命令）写在里面，搭配正则表达式、管道命令与数据流重定向等功能，以达到我们所想要的处理目的。
+
+​	shell script是直接利用shell与相关工具，所以不需要编辑即可执行。
+
+### 基本语法
+
+#### 基本知识
+
+1. 命令的执行是从上而下，从左而右地分析与执行
+2. 空白行会被忽略掉，并且[tab]键所得到的空白同样是为空格键
+3. 读取到一个Enter符号（CR），就尝试开始执行改行命令
+4. 一行内容太多，可以使用`\[Enter]`换行
+5. `#`视为批注
+
+#### 执行命令的方法
+
+​	执行sh文件必须具备可读与可执行(`rx`)权限！
+
+​	分为执行命令的方式有两大种，其中第一种又分3种。
+
+- 使用bash
+
+  ```Shell
+  bash shell.sh
+  或
+  sh shell.sh
+  ```
+
+  - 绝对路径执行
+  - 相对路径执行
+  - 放置到PATH或其已经写入的目录下，直接输入sh文件名执行
+
+  **这种方式执行，script会使用一个新的`bash`环境来执行命令，即script是在bash的子进程执行的。所以在script中设置的变量不会传回到父进程中。**
+
+  ![image-20220105165748382](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105165748382.png)
+
+- 利用source或`.`
+
+  ```shell
+  source shell.sh
+  ```
+
+  **这种方式执行，script直接在父进程中执行，所以script中定义的变量会生效**。
+
+  ![image-20220105165853548](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105165853548.png)
+
+#### sh文件分析
+
+![image-20220105164206712](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105164206712.png)
+
+- 第一部分，声明，说明这个script使用的shell名称
+
+  bash在执行的时候会加载相关的配置文件，一般是non-login shell的`~/.bashrc`。
+
+- 第二部分，批注，程序内容的说明
+
+- 第三部分，主要环境变量的说明
+
+  一般来说声明PATH和LANG，以使用外部命令
+
+- 第4部分，主要程序部分
+
+- 第5部分，告知执行结果
+
+  `exit n表示中断程序并回传一个值个系统。后面的命令使用`$?`即可得到这个值。
+
+### 逻辑语法
+
+#### 判断式
 
 
 
-## Shell资源限制命令ulimit
+## Shell其他相关命令
+
+### Shell资源限制命令ulimit
 
 ![image-20220103172454549](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220103172454549.png)
+
+### 查看历史输入命令history
+
+![image-20220105133021865](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105133021865.png)
+
+- 历史命令记录在`~/.bash_history`文件中
+- `~/.bash_history`记录的命令个数和bash的`HISTSIZE`变量有关。
+
+### 设置终端机环境stty/set
+
+- 设置按键代表的含义等
+
+![image-20220105144130419](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105144130419.png)
+
+```shell
+stty function Key
+#例如： stty erase ^h，^代表[Ctrl]
+```
+
+- 设置Bash的终端机环境
+
+![image-20220105144453394](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105144453394.png)
+
+### 文件比较命令diff/cmp/patch
+
+- diff
+
+  以行为单位进行文件比较
+
+  ![image-20220105162630991](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105162630991.png)
+
+- cmp
+
+  利用字节为单位进行比较，可以比较二进制文件
+
+  ![image-20220105162745735](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105162745735.png)
+
+- patch
+
+  ![image-20220105162854512](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220105162854512.png)
 
