append sth to virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -573,6 +573,158 @@ lsb_release -a
 clear
 ```
 
+# Linux用户管理
+
+## Linux的账号与用户组
+
+### 用户标识符
+
+​	在登录Linux时，是根据ID（UID和GID）来辨认用户，ID和账号的关系存储在**`/etc/passwd`和`/etc/group`**文件中。
+
+​	标识符ID分为两种
+
+- 用户ID，UID
+- 用户组ID，GID
+
+### 用户账号
+
+#### 用户登录shell流程
+
+1. 先查`/etc/passwd`文件是否有相关账号
+   - 有，查出对应的UID，然后从`/etc/group`文件读出GID
+   - 没有，提示没有账号
+2. 核对密码表，从`/etc/shadow`找出对应账号信息，对比密码是否正确
+3. 如果一切都正确，进入shell
+
+#### `/etc/passwd`文件概览
+
+每一行都代表一个账号。注意，其中有很多系统账号，不能删除！
+
+![image-20220106113429085](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106113429085.png)
+
+一共被`:`分隔出7个字段
+
+1. 账号名称
+
+2. 密码
+
+   显示`x`，因为对应密码被放到`/etc/shadow`文件了
+
+3. UID
+
+   ![image-20220106113610216](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106113610216.png)
+
+4. GID
+
+5. 用户信息说明列
+
+6. 主文件夹路径
+
+   默认用户在`/home/username`，root在`/root`
+
+7. Shell
+
+   用户登录的默认shell设置
+
+#### `/etc/shadow`文件概览
+
+每一行都代表一个账号信息
+
+![image-20220106113918319](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106113918319.png)
+
+一共被`:`分隔出9个字段
+
+1. 账户名称
+
+2. 密码
+
+   密码经过加密了
+
+3. 最近更改密码的日期
+
+   从1970-01-01开始计算的累加日期
+
+4. 密码不可被更改的天数
+
+   相对于第3字段而言的，即为修改密码的间隔时间参数
+
+5. 密码需要修改的天数
+
+   相对于第3字段而言的，即为下一次需要修改密码的时间间隔
+
+6. 密码需要修改期限前的警告天数
+
+   相对第5字段而言的，发出提醒
+
+7. 密码过期后的账号宽限时间
+
+   相对第5字段而言的
+
+8. 账号失效日期
+
+   从1970-01-01开始计算的累加日期计算，表示账号在整个日期之后不能使用
+
+9. 保留字段
+
+   日后新功能加入使用
+
+### 用户组设置
+
+与用户组相关的配置文件在`/etc/group`和`/etc/gshadow`中。
+
+#### `/etc/group`文件概览
+
+每一行代表一个用户组
+
+![image-20220106114733243](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106114733243.png)
+
+一共被`:`分隔出4个字段
+
+1. 用户组名称
+
+2. 用户组密码
+
+   显示`x`，移动到`/etc/gshadow`文件中
+
+3. GID
+
+4. 此用户组支持的账号名称
+
+#### `/etc/gshadow`文件概览
+
+![image-20220106115855619](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106115855619.png)
+
+1. 用户组名
+2. 密码列
+3. 用户组管理员的账号
+4. 该用户组的所属账号
+
+#### 有效与初始用户组
+
+- 初始用户组(initial group)
+
+  `/etc/passwd`的GID，是用户登录系统就立刻拥有的用户组。
+
+- 有效用户组(effective group)
+
+  当有多个用户组支持这个用户账号时，若用户新建文件，文件的GID对应的用户组，即为有效用户组
+
+- 用户组信息查看groups
+
+  使用`groups`命令可以查看所以支持这个账号的用户组，且**第一个列出的用户组就是有效用户组**
+
+- 有效用户组切换newgrp
+
+  在已经支持本账号的用户组间切换
+
+  ```shell
+  newgrp groupname
+  ```
+
+## 账号管理
+
+
+
 # Linux文件系统
 
 ## 文件系统与磁盘管理
@@ -1450,10 +1602,6 @@ file filename
 
 ![image-20211229161253678](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20211229161253678.png)
 
-# Linux用户管理
-
-Chapter 14、
-
 # Linux进程管理
 
 Chapter 16、17、18
@@ -2057,11 +2205,105 @@ source filename
 
   `exit n表示中断程序并回传一个值个系统。后面的命令使用`$?`即可得到这个值。
 
+#### sh的默认变量
+
+- 使用特殊符号，读取sh文件后接的输入参数。
+
+  ​	按整条命令的参数顺序，依次为`$0`、`$1`等（从bash/sh的下一个参数开始）
+
+  ![image-20220106105950275](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106105950275.png)
+
+- 一些特殊符号：
+  - `$#`，表示sh文件后面接的参数的个数
+  - `$@`，表示sh文件的所有参数
+  - `$*`，表示`$0c$1c$2`，其中c为分隔符，默认为空格键
+
+- `shift`，造成参数变量号码偏移
+
 ### 逻辑语法
 
-#### 判断式
+#### 条件判断
 
+**两个可以写在条件里面的判断式**:
 
+- 测试命令Test
+
+  检测某个文件是否存在、是否有特定属性权限、基本大小判断等等。![image-20220106104417160](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106104417160.png)![image-20220106104450709](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106104450709.png)
+
+- 判读符号[]
+
+  返回结果只有真和假，可以结合`&&`和`||`使用
+
+  ![image-20220106105056317](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106105056317.png)
+
+  **一些注意事项：**
+
+  - 中括号的两端需要有空格符来分割
+  - 中括号内的每个组件都需要有空格键来分隔
+  - 中括号内的变量，最好都以双引号括起来
+  - 中括号内的常量，最好都以单或双引号括起来
+
+  **一些参数：**
+
+  - `-o`参数，在中括号里面相当于“或”
+
+**下面就是具体的条件表达式**:
+
+- `if...then`
+
+  ![image-20220106110644574](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106110644574.png)
+
+  ![image-20220106110719404](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106110719404.png)
+
+- `case..esac`
+
+  ![image-20220106110834908](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106110834908.png)
+
+  一个列子：
+
+  ![image-20220106110856307](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106110856307.png)
+
+#### 循环
+
+*不定循环*：
+
+- `while do done`
+
+  ![image-20220106111728580](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106111728580.png)
+
+- `until do done`
+
+  ![image-20220106111744960](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106111744960.png)
+
+*固定循环*：
+
+- `for...do...done`
+
+  ![image-20220106111858866](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106111858866.png)
+
+  ![image-20220106111937902](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106111937902.png)
+
+### 函数
+
+- 语法
+
+  ![image-20220106111103302](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106111103302.png)
+
+  由于shell script的执行方式是由上而下、由左而右，所以**function的设置一定要在程序的最前面**。
+
+- 内置参数
+
+  函数名称用`$0`表示，后续节点变量依次用`$1`、`$2`等表示。
+
+  后面接参数的形式是：
+
+  ```shell
+  fname opt1 opt2 opt3 ...
+  ```
+
+### shell script的追踪与调试
+
+![image-20220106112036406](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106112036406.png)
 
 ## Shell其他相关命令
 
