finish user manage in virbd-linux blog

--- a/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
+++ b/_posts/2021-12-16-《鸟哥的LINUX私房菜_基础学习篇》笔记.md
@@ -723,7 +723,243 @@ clear
 
 ## 账号管理
 
+### 新增与删除用户
 
+#### 新增用户useradd
+
+![image-20220106162339197](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106162339197.png)
+
+- 默认的一些参数
+
+  使用`useradd -D`查看你默认参数，如group、home目录等等。
+
+  这些数据由**`/etc/default/useradd`**提供
+
+- UID/GID、密码参数等
+
+  来自`/etc/login.defs`文件
+
+  ![image-20220106162911549](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106162911549.png)
+
+#### 设置密码passwd
+
+![image-20220106163028254](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106163028254.png)
+
+#### 修改密码参数chage
+
+![image-20220106163238915](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106163238915.png)
+
+#### 修改账号参数usermod
+
+![image-20220106163342766](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106163342766.png)
+
+#### 删除用户userdel
+
+![image-20220106163515317](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106163515317.png)
+
+删除用户的相关数据，主要是：
+
+- 用户账号/密码：`/etc/passwd`、`/etc/shadow`
+- 用户组相关参数：`/etc/group`、`/etc/gshadow`
+- 用户个人文件数据：`/home/username`、`/var/spool/mainl/username`等等
+
+#### 批量新建用户模板
+
+```shell
+#!/bin/bash
+# 新建账号，功能包括：
+# 1. 检查account1.txt文件是否存在，并将该文件内的账号取出
+# 2. 新建上述文件的账号
+# 3. 将上述账号的密码修改成强制第一次进入需要修改密码的格式
+export PATH=/bin:/sbin:/usr/bin:/user/sbin
+if [ ! -f account1.txt ]; then
+	echo "所需要的账号文件不存在，请新建account1.txt，每行一个账号名称"
+	exit 1
+fi
+usernames=$(cat account1.txt)
+for username in $usernames
+do
+	useradd $username
+	echo $username | passwd --stdin $username
+	chage -d 0 $username
+done
+```
+
+```shell
+# account1.txt
+std01
+std02
+std03
+```
+
+### 用户其他功能
+
+- 查看用户相关信息
+
+  ![image-20220106164521828](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164521828.png)
+
+- 改变用户相关信息
+
+  ![image-20220106164553425](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164553425.png)
+
+- 改变用户的shell
+
+  ![image-20220106164613803](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164613803.png)
+
+- 查看UID/GID
+
+  ![image-20220106164651382](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164651382.png)
+
+### 新增与删除用户组
+
+#### 新增用户组groupadd
+
+![image-20220106164753657](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164753657.png)
+
+#### 修改用户组参数groupmod
+
+![image-20220106164836364](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164836364.png)
+
+#### 删除用户组
+
+![image-20220106164900521](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106164900521.png)
+
+删除用户组时，必须确保**`/etc/passwd`内的账号没有任何人使用该用户组作为初始用户组。**
+
+#### 管理用户组
+
+![image-20220106165143996](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106165143996.png)
+
+## ACL权限
+
+### 概念
+
+​	ACL（Access Control List），主要的目的是提供**`ogu`的`rxw`之外**的具体权限设置。ACL可以针对单一用户、单一文件/目录来进行`rwx`权限的设置。
+
+​	ACL需要文件系统的支持，Centos默认是启动ACL的，若没有启动，可以：
+
+```shell
+mount -o remount,acl /
+```
+
+​	或者前往`/etc/fstab`文件修改信息如下：
+
+![image-20220106165802144](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106165802144.png)
+
+### 文件ACL的设置
+
+#### 设置文件ACL
+
+- 使用`setfacl`命令。
+
+![image-20220106165910502](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106165910502.png)
+
+- acl参数的格式
+
+  `u:用户/用户组:权限`
+
+  若用户字段没有，表示所有者
+
+  ```shell
+  setfacl -m u:username:rwx filename
+  ```
+
+  设置完后，文件的权限会出现`+`
+
+  ```
+  -rwxr-xr--+
+  ```
+
+#### 查看文件ACL
+
+- 使用`getfacl`命令
+
+  ```shell
+  getfacl filename #参数与setfacl相同，这里省略了
+  ```
+
+  ![image-20220106170627549](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106170627549.png)
+
+  **其中mask是文件的最大范围权限！**
+
+## 用户身份切换
+
+​	在不同用户身份切换，一般是普通用户和root的切换
+
+### su
+
+![image-20220106171040573](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106171040573.png)
+
+​	**切换root的时候，需要输入root的密码**
+
+- su后不接参数
+
+  表示使用non-login shell的方式登录root，很多原本的变量不会改变，如PATH等。
+
+  ![image-20220106171302965](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106171302965.png)
+
+- su后接`-`
+
+  代表使用login shell的方式登录root，环境完全变为root环境
+
+- 使用`exit`退出su环境
+
+### sudo
+
+![image-20220106171606965](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106171606965.png)![image-20220106171614502](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106171614502.png)
+
+- **切换root的时候，不需要root密码，输入自己的密码即可，且仅有/etc/sudoers的用户才能执行sudo命令**。
+
+- 设置sudo权限使用`visudo`命令。
+
+  ![image-20220106172009357](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106172009357.png)
+
+## 用户信息传递
+
+### 查询用户在线信息
+
+- `w`/`who`
+
+  查看目前已登录系统的用户
+
+- `last`
+
+  查询近来登陆者信息
+
+- `lastlog`
+
+  读取`/var/log/lastlog`文件，查询每个账号的最近登录时间
+
+### 用户对谈
+
+- write
+
+  给某个用户写消息
+
+  ![image-20220106172732376](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106172732376.png)
+
+- mesg
+
+  ```shell
+  mesg n #拒绝接收消息，但root的消息不可抵挡
+  mesg y #接收消息
+  ```
+
+- wall
+
+  对所有系统用户广播消息
+
+  ```shell
+  wall messagecontent
+  ```
+
+### 用户邮箱
+
+​	每个Linux用户都有一个mailbox
+
+​	mailbox在`/var/spool/mail/username`文件
+
+![image-20220106173200918](https://gitee.com/Object_Jason/my-pic-go/raw/master/img/image-20220106173200918.png)
 
 # Linux文件系统
 
@@ -1608,7 +1844,7 @@ Chapter 16、17、18
 
 # Linux系统使用
 
-Chaper 21、22、23
+Chaper 22、23
 
 # Shell
 
